# QVideoPlayer

./: CMakeLists.txt  README.md  blocking_queue.h  main.cc  video_codec.cpp  video_codec.hpp  video_codec_impl.c  video_codec_impl.h  video_player_view.cpp  video_player_view.hpp
QVideoPlayer/: main.c  main.cc  main.cpp  video_codec.cpp  video_codec.hpp  video_codec_impl.c
QVideoPlayer.xcodeproj/: project.pbxproj
QVideoPlayer.xcodeproj/project.xcworkspace/xcuserdata/jt.xcuserdatad/: UserInterfaceState.xcuserstate
QVideoPlayer.xcodeproj/xcshareddata/xcschemes/: QVideoPlayer.xcscheme
QVideoPlayer.xcodeproj/xcuserdata/chenjiating.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
QVideoPlayer.xcodeproj/xcuserdata/chenjiating.xcuserdatad/xcschemes/: xcschememanagement.plist
QVideoPlayer.xcodeproj/xcuserdata/jt.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
